# java/lance-namespace-springboot-server/src/main/java/org/lance/namespace/server/springboot/model/ListTablesRequest.java
@@ -42,7 +42,7 @@ public class ListTablesRequest {
 
   private Integer limit;
 
-  private Boolean listDeclared = false;
+  private Boolean includeDeclared;
 
   public ListTablesRequest identity(Identity identity) {
     this.identity = identity;
@@ -183,29 +183,30 @@ public class ListTablesRequest {
     this.limit = limit;
   }
 
-  public ListTablesRequest listDeclared(Boolean listDeclared) {
-    this.listDeclared = listDeclared;
+  public ListTablesRequest includeDeclared(Boolean includeDeclared) {
+    this.includeDeclared = includeDeclared;
     return this;
   }
 
   /**
    * When true, includes tables that have been declared in the namespace but not yet created on
-   * storage. Default is false.
+   * storage, in addition to tables that have been created. When false or not set, only tables with
+   * storage components are returned.
    *
-   * @return listDeclared
+   * @return includeDeclared
    */
   @Schema(
-      name = "list_declared",
+      name = "include_declared",
       description =
-          "When true, includes tables that have been declared in the namespace but not yet created on storage. Default is false. ",
+          "When true, includes tables that have been declared in the namespace but not yet created on storage, in addition to tables that have been created. When false or not set, only tables with storage components are returned. ",
       requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("list_declared")
-  public Boolean getListDeclared() {
-    return listDeclared;
+  @JsonProperty("include_declared")
+  public Boolean getIncludeDeclared() {
+    return includeDeclared;
   }
 
-  public void setListDeclared(Boolean listDeclared) {
-    this.listDeclared = listDeclared;
+  public void setIncludeDeclared(Boolean includeDeclared) {
+    this.includeDeclared = includeDeclared;
   }
 
   @Override
@@ -222,12 +223,12 @@ public class ListTablesRequest {
         && Objects.equals(this.id, listTablesRequest.id)
         && Objects.equals(this.pageToken, listTablesRequest.pageToken)
         && Objects.equals(this.limit, listTablesRequest.limit)
-        && Objects.equals(this.listDeclared, listTablesRequest.listDeclared);
+        && Objects.equals(this.includeDeclared, listTablesRequest.includeDeclared);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(identity, context, id, pageToken, limit, listDeclared);
+    return Objects.hash(identity, context, id, pageToken, limit, includeDeclared);
   }
 
   @Override
@@ -239,7 +240,7 @@ public class ListTablesRequest {
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    pageToken: ").append(toIndentedString(pageToken)).append("\n");
     sb.append("    limit: ").append(toIndentedString(limit)).append("\n");
-    sb.append("    listDeclared: ").append(toIndentedString(listDeclared)).append("\n");
+    sb.append("    includeDeclared: ").append(toIndentedString(includeDeclared)).append("\n");
     sb.append("}");
     return sb.toString();
   }
